{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 58,
  "lineage": "597da078-a1a9-54d3-2409-81a9c399e6a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:security-group/sg-03c7fa635bd41ab60",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03c7fa635bd41ab60",
            "ingress": [],
            "name": "all_worker_management20240703114534823100000004",
            "name_prefix": "all_worker_management",
            "owner_id": "610336139945",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-2850269873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03c7fa635bd41ab60",
            "security_group_rule_id": "sgr-074a77d03a8b7bf1f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-4258773621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03c7fa635bd41ab60",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:security-group/sg-0ad0a02c51eaffb2f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ad0a02c51eaffb2f",
            "ingress": [],
            "name": "abhi-eks-8stz4KTF-cluster-20240703114534832300000008",
            "name_prefix": "abhi-eks-8stz4KTF-cluster-",
            "owner_id": "610336139945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abhi-eks-8stz4KTF-cluster",
              "cluster": "demo"
            },
            "tags_all": {
              "Name": "abhi-eks-8stz4KTF-cluster",
              "cluster": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:security-group/sg-0e52fe67f9e80fe72",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0e52fe67f9e80fe72",
            "ingress": [],
            "name": "abhi-eks-8stz4KTF-node-20240703114534823700000005",
            "name_prefix": "abhi-eks-8stz4KTF-node-",
            "owner_id": "610336139945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abhi-eks-8stz4KTF-node",
              "cluster": "demo",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "owned"
            },
            "tags_all": {
              "Name": "abhi-eks-8stz4KTF-node",
              "cluster": "demo",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-426664212",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad0a02c51eaffb2f",
            "security_group_rule_id": "sgr-0031f27dc3f9288b2",
            "self": false,
            "source_security_group_id": "sg-0e52fe67f9e80fe72",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1217115208",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e52fe67f9e80fe72",
            "security_group_rule_id": "sgr-0da2d88fb5f06fb19",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2402494646",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e52fe67f9e80fe72",
            "security_group_rule_id": "sgr-004338678a8121cc7",
            "self": false,
            "source_security_group_id": "sg-0ad0a02c51eaffb2f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3052531761",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e52fe67f9e80fe72",
            "security_group_rule_id": "sgr-099aa0f07d797d1c6",
            "self": false,
            "source_security_group_id": "sg-0ad0a02c51eaffb2f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2092144551",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e52fe67f9e80fe72",
            "security_group_rule_id": "sgr-00f00e1be44337be8",
            "self": false,
            "source_security_group_id": "sg-0ad0a02c51eaffb2f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1877977990",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e52fe67f9e80fe72",
            "security_group_rule_id": "sgr-095e02125cb60887e",
            "self": false,
            "source_security_group_id": "sg-0ad0a02c51eaffb2f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-189700173",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e52fe67f9e80fe72",
            "security_group_rule_id": "sgr-0ef5ca83f2bd7d5f1",
            "self": false,
            "source_security_group_id": "sg-0ad0a02c51eaffb2f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4066199831",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e52fe67f9e80fe72",
            "security_group_rule_id": "sgr-0348c7804feb28911",
            "self": false,
            "source_security_group_id": "sg-0ad0a02c51eaffb2f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2404567782",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e52fe67f9e80fe72",
            "security_group_rule_id": "sgr-0f02b1e58e191dfa6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-141377571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e52fe67f9e80fe72",
            "security_group_rule_id": "sgr-0ca43297f6b7d9fad",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2889016268",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e52fe67f9e80fe72",
            "security_group_rule_id": "sgr-0e92682575e4c82bf",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:network-acl/acl-0a5f0b3bb8defcb56",
            "default_network_acl_id": "acl-0a5f0b3bb8defcb56",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a5f0b3bb8defcb56",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "610336139945",
            "subnet_ids": [
              "subnet-0040eb21b41b2593e",
              "subnet-0058c45c716aeea6e",
              "subnet-0c78d7e8fa4324f84",
              "subnet-0e358db534fa2146e"
            ],
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:route-table/rtb-08a149447f3784f37",
            "default_route_table_id": "rtb-08a149447f3784f37",
            "id": "rtb-08a149447f3784f37",
            "owner_id": "610336139945",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:security-group/sg-033e35bdd271bb450",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-033e35bdd271bb450",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "610336139945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e0ca7cc1fe5a1c3",
            "arn": "arn:aws:ec2:us-west-1:610336139945:elastic-ip/eipalloc-04e0ca7cc1fe5a1c3",
            "domain": "vpc",
            "id": "eipalloc-04e0ca7cc1fe5a1c3",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-177-195-184.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.195.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:internet-gateway/igw-02aa99aa5d3018dc6",
            "id": "igw-02aa99aa5d3018dc6",
            "owner_id": "610336139945",
            "tags": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e0ca7cc1fe5a1c3",
            "association_id": "eipassoc-0dfdda12c9b4bce29",
            "connectivity_type": "public",
            "id": "nat-0541b5cb26e8e7f27",
            "network_interface_id": "eni-08daba554d76298d0",
            "private_ip": "10.0.4.140",
            "public_ip": "54.177.195.184",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0040eb21b41b2593e",
            "tags": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-026424d288720a0871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0541b5cb26e8e7f27",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-026424d288720a087",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02aa99aa5d3018dc6",
            "id": "r-rtb-0e1a09cfa06efd1141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1a09cfa06efd114",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:route-table/rtb-026424d288720a087",
            "id": "rtb-026424d288720a087",
            "owner_id": "610336139945",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-private",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:route-table/rtb-0e1a09cfa06efd114",
            "id": "rtb-0e1a09cfa06efd114",
            "owner_id": "610336139945",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-public",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0420ffa4fccb5a7b6",
            "route_table_id": "rtb-026424d288720a087",
            "subnet_id": "subnet-0e358db534fa2146e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09abefa76800010de",
            "route_table_id": "rtb-026424d288720a087",
            "subnet_id": "subnet-0c78d7e8fa4324f84"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04af214965e871d53",
            "route_table_id": "rtb-0e1a09cfa06efd114",
            "subnet_id": "subnet-0040eb21b41b2593e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c5b4ad1a2d74426",
            "route_table_id": "rtb-0e1a09cfa06efd114",
            "subnet_id": "subnet-0058c45c716aeea6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:subnet/subnet-0e358db534fa2146e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e358db534fa2146e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610336139945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-private-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:subnet/subnet-0c78d7e8fa4324f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c78d7e8fa4324f84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610336139945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-private-us-west-1b",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private-us-west-1b",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:subnet/subnet-0040eb21b41b2593e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0040eb21b41b2593e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610336139945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-public-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:subnet/subnet-0058c45c716aeea6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0058c45c716aeea6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610336139945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-public-us-west-1b",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public-us-west-1b",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cf916105af850c7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:610336139945:vpc/vpc-0cf916105af850c7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5f0b3bb8defcb56",
            "default_route_table_id": "rtb-08a149447f3784f37",
            "default_security_group_id": "sg-033e35bdd271bb450",
            "dhcp_options_id": "dopt-03518b3afbe13066a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf916105af850c7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a149447f3784f37",
            "owner_id": "610336139945",
            "tags": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/abhi-eks-8stz4KTF": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}